remote extra_personalisation from email and sms
this is as any variable interpolation/injection is now done client side
